--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -182,3 +182,13 @@ p {
     width: 42px;
     height: 42px;
 }
+
+@media (max-width: 768px) {
+    body {
+        padding : 0;
+    }
+    .signinContainor {
+        width: 100%;
+        padding : 150px 32px;
+    }
+}
