--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -175,3 +175,13 @@ p {
     height: 24px;
     flex-shrink: 0;
 }
+
+@media (max-width: 768px) {
+    body {
+        padding : 0;
+    }
+    .signupContainor {
+        width: 100%;
+        padding : 150px 32px;
+    }
+}
