--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,7 @@ body {
     margin : 0;
 }
 
-p {
+p, h1 {
     margin : 0;
 }
 
@@ -418,5 +418,69 @@ footer {
 @media (max-width : 768px) {
     br {
         display: none;
+    }
+
+    header,
+    .content1,
+    .content2,
+    .content3,
+    .content4,
+    .content5,
+    .footerContainor{
+        padding-left : 32px;
+        padding-right: 32px;
+    }
+
+    .content1 {
+        padding-top : 28px;
+    }
+
+    .explain {
+        padding-left : 44.5px;
+        padding-right: 44.5px;
+    }
+
+    .img1 {
+        width: 100%;
+    }
+
+    .img1 img {
+        width: 100%;
+    }
+
+    .content2, .content3, .content4, .content5 {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+
+    .containor2, .containor3, .containor4, .containor5 {
+        gap: 20px;
+        flex-direction: column;
+        width : 100%;
+    }
+    .textbox {
+        width: 100%;
+    }
+
+    .img2, .img3, .img4, .img5 {
+        width: 100%;
+        height: 100%;
+    }
+
+    .content2Title {
+        order: 1;
+    }
+
+    .img2 {
+        order: 2;
+    }
+
+    .contentParagraph {
+        order: 3;
+    }
+
+    footer {
+        padding-top : 40px;
+        height: 0;
     }
 }
