--- a/css/default.css
+++ b/css/default.css
@@ -51,3 +51,19 @@ img {
   font-weight: 600;
   font-size: 1.125rem;
 }
+
+@media (max-width: 767px) {
+  html {
+    font-size: 62.5%;
+  }
+
+  .btn {
+    padding: 10px 0;
+    font-size: 1.4rem;
+  }
+
+  .pc-br {
+    display: none;
+  }
+
+}
