--- a/static/css/style.css
+++ b/static/css/style.css
@@ -460,27 +460,36 @@ footer {
     }
     .textbox {
         width: 100%;
+        order : 1;
+    }
+
+    .textbox h1 {
+        padding-bottom: 10px;
     }
 
     .img2, .img3, .img4, .img5 {
         width: 100%;
         height: 100%;
-    }
-
-    .content2Title {
-        order: 1;
-    }
-
-    .img2 {
         order: 2;
-    }
-
-    .contentParagraph {
-        order: 3;
     }
 
     footer {
         padding-top : 40px;
         height: 0;
     }
+
+    .footerContent {
+        display: grid;
+        grid-template: 1fr / 1fr 1fr;
+        gap : 60px;
+      }
+      
+      .codeit {
+        text-align: left;
+        grid-area: 2/ 1;
+      }
+
+      .footerIcon {
+        justify-content: flex-end;
+      }
 }
