--- a/style-landing.css
+++ b/style-landing.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: content-box;
+}
+
 html {
   font-family: Pretendard,"Abel", "Acme",sans-serif;
   word-break: keep-all;
@@ -15,6 +19,9 @@ header {
 
 main {
   background-color: var(--white);
+  margin-top: -25px;
+  position: relative;
+  z-index: 1;
 }
 
 footer {
@@ -27,7 +34,7 @@ footer {
 .head,
 .contents,
 .info {
-  border: 5px solid red;
+  /* border: 5px solid red; */
   margin: 0 auto;
 } 
 
@@ -76,7 +83,7 @@ footer {
 }
 
 .head {
-  max-width: 1050px;
+  max-width: 1200px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -95,16 +102,29 @@ footer {
   margin: 70px 0 0;
 }
 
-.head-button {
-  width: 350px;
-}
-
 .head-text-gradiant {
   background: linear-gradient(91deg, #6D6AFE 17.28%, #FF9F9F 74.98%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.head-button {
+  width: 350px;
+}
+
+.head-image {
+  width: 1200px;
+  height: 660px;
+  margin: 50px 40px 0;
+  border-radius: 25px;
+  background-image: linear-gradient(180deg, rgba(196, 196, 196, 0.00) 67.68%, #f0f6ff 94.76%);
+  box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top -20px;
+}
+
 
 .contents {
   background: var(--white);
