--- a/static/css/style.css
+++ b/static/css/style.css
@@ -460,17 +460,24 @@ footer {
     }
     .textbox {
         width: 100%;
-        order : 1;
     }
 
-    .textbox h1 {
-        padding-bottom: 10px;
+    .textbox:nth-child(n) {
+        display: contents;
+    }
+
+    .textbox:nth-child(2n) {
+        display: contents;
     }
 
     .img2, .img3, .img4, .img5 {
         width: 100%;
         height: 100%;
         order: 2;
+    }
+
+    .contentParagraph {
+        order: 3;
     }
 
     footer {
