--- a/style-landing.css
+++ b/style-landing.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: content-box;
-}
-
 html {
   font-family: Pretendard,"Abel", "Acme",sans-serif;
   word-break: keep-all;
@@ -83,7 +79,7 @@ footer {
 }
 
 .head {
-  max-width: 1200px;
+  width: 1200px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -116,7 +112,7 @@ footer {
 .head-image {
   width: 1200px;
   height: 660px;
-  margin: 50px 40px 0;
+  padding: 50px 40px 0;
   border-radius: 25px;
   background-image: linear-gradient(180deg, rgba(196, 196, 196, 0.00) 67.68%, #f0f6ff 94.76%);
   box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
@@ -125,15 +121,23 @@ footer {
   background-position: center top -20px;
 }
 
-
 .contents {
   background: var(--white);
   display: flex;
-  gap: 157px;
-  max-width: 1050px;
+  width: 1000px;
+  height: 450px;
+  box-sizing: content-box;
   justify-content: space-between;
   align-items: center;
-  padding: 100px 0 25px;
+  padding: 120px 100px 50px;
+}
+
+.contents-image {
+  width: 550px;
+  height: 450px;
+  background-repeat: no-repeat;
+  background-size: 105%;
+  background-position: center;
 }
 
 
@@ -144,6 +148,7 @@ footer {
   font-weight: 700;
   line-height: normal;
   letter-spacing: -0.3px;
+  margin: 0 0 10px 0;
 }
 
 .contents-text-gradient {
@@ -182,6 +187,7 @@ footer {
   font-style: normal;
   font-weight: 400;
   line-height: 150%; /* 24px */
+  margin: 0;
 }
 
 .info {
