--- a/style.css
+++ b/style.css
@@ -121,7 +121,6 @@ body {
 
 .flex_box_p {
   color: #6b6b6b;
-  font-family: Abel;
   font-size: 16px;
   line-height: 24px;
   margin-top: 10px;
@@ -180,6 +179,7 @@ body {
 
 .footer_p {
   color: #676767;
+  font-family: Arial;
 }
 
 .footer_center_link_div {
@@ -198,13 +198,18 @@ body {
   gap: 12px;
 }
 
-.br_hidden {
+.tablet_br,
+.mobile_br {
   display: none;
+}
+
+.desktop_br {
+  display: inline;
 }
 
 @media (max-width: 1199px) {
   .header {
-    padding: 20px 0px;
+    padding: 20px 32px;
     position: fixed;
     top: 0;
     left: 0;
@@ -214,14 +219,6 @@ body {
 
   .header_div {
     max-width: 799px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-  }
-
-  .br_hidden {
-    display: inline;
   }
 
   .main_section_img {
@@ -242,8 +239,113 @@ body {
   .boxs_margin_top {
     margin-top: 80px;
   }
+
+  .desktop_br {
+    display: none;
+  }
+
+  .tablet_br {
+    display: inline;
+  }
 }
 
-/* @media (max-width: 767px) {
-  
-} */
+@media (max-width: 767px) {
+  .header {
+    padding: 20px 32px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--gray-F0F6FF);
+  }
+
+  .header_btn {
+    width: 80px;
+    padding: 10px 16px;
+    font-size: 14px;
+  }
+
+  .main_section_text {
+    font-size: 32px;
+    line-height: 42px;
+    margin-top: 91px;
+  }
+
+  .main_section_btn {
+    width: 200px;
+    padding: 10px 16px;
+    font-size: 14px;
+    margin-top: 24px;
+  }
+
+  .main_section_img {
+    width: 303px;
+    height: 179px;
+    margin-top: 38px;
+  }
+
+  .flex_boxs {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+  }
+
+  .boxs_margin_top {
+    margin-top: 40px;
+  }
+
+  .flex_box_text {
+    font-size: 24px;
+  }
+
+  .flex_box_p {
+    font-size: 15px;
+    line-height: 22.5px;
+  }
+
+  .imgs {
+    width: 325px;
+    height: 266px;
+  }
+
+  .boxs_margin {
+    margin-top: 76px;
+  }
+
+  .mobile_order {
+    order: 2;
+  }
+
+  .desktop_br,
+  .tablet_br {
+    display: none;
+  }
+
+  .mobile_br {
+    display: inline;
+  }
+
+  .footer {
+    padding: 32px;
+    margin-top: 81px;
+  }
+
+  .footer_div {
+    height: 96px;
+    flex-flow: column wrap;
+    align-content: space-between;
+    gap: 60px;
+  }
+
+  .footer_center_link_div {
+    order: 1;
+  }
+
+  .footer_p {
+    order: 2;
+  }
+
+  .footer_linkbox {
+    order: 3;
+  }
+}
