--- a/css/landing.css
+++ b/css/landing.css
@@ -4,6 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 520px;
 }
 nav {
   display: flex;
@@ -182,6 +183,7 @@ a:visited {
   display: flex;
   column-gap: 30px;
 }
+
 .social img {
   height: 100%;
 }
@@ -259,11 +261,30 @@ a:visited {
     grid-template-columns: 1fr 1fr;
     grid-column-gap: auto;
     grid-row-gap: 60px;
+    font-size: 20px;
+    padding: 50px;
   }
   .br-mobile {
     display: none;
   }
   .br-display {
     display: inline;
+  }
+  .codeit-text {
+    grid-row: 2;
+    grid-column: 1;
+  }
+  .social {
+    justify-self: right;
+  }
+  .social a {
+    height: 30px;
+    width: 30px;
+  }
+  .help {
+    justify-content: space-between;
+  }
+  .help a {
+    line-height: 30px;
   }
 }
