--- a/css/reset.css
+++ b/css/reset.css
@@ -46,6 +46,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-button {
+button{
 	border: none;
+}
+a {
+	text-decoration-line: none;
 }
