--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ header {
   font-family: Pretendard;
   font-weight: 600;
   border-radius: 8px;
+  text-align: center;
   background-image: linear-gradient(90deg,var(--primary),skyblue);
 }
 
