--- a/style-landing.css
+++ b/style-landing.css
@@ -35,7 +35,6 @@ footer {
 } 
 
 .nav {
-  width: 100%;
   max-width: 1920px;
   position: fixed;
   top: 0;
@@ -81,7 +80,7 @@ footer {
 }
 
 .head {
-  width: 700px;
+  width: 1200px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -114,7 +113,7 @@ footer {
 .head-image {
   width: 1200px;
   height: 660px;
-  padding: 50px 40px 0;
+  margin: 50px 40px 0;
   border-radius: 25px;
   background-image: linear-gradient(180deg, rgba(196, 196, 196, 0.00) 67.68%, #f0f6ff 94.76%);
   box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
