--- a/style-landing.css
+++ b/style-landing.css
@@ -35,14 +35,13 @@ footer {
 } 
 
 .nav {
-  width: 100%;
-  max-width: 1920px;
+  max-width: 864px;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   background: transparent;
-  padding: 20px 168px;
+  padding: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -81,7 +80,7 @@ footer {
 }
 
 .head {
-  width: 1200px;
+  width: 700px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -112,9 +111,9 @@ footer {
 }
 
 .head-image {
-  width: 1200px;
-  height: 660px;
-  padding: 50px 40px 0;
+  width: 650px;
+  height: 383px;
+  margin-top: 30px;
   border-radius: 25px;
   background-image: linear-gradient(180deg, rgba(196, 196, 196, 0.00) 67.68%, #f0f6ff 94.76%);
   box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
@@ -126,17 +125,17 @@ footer {
 .contents {
   background: var(--white);
   display: flex;
-  width: 1000px;
-  height: 450px;
+  width: 700px;
+  height: 315px;
   box-sizing: content-box;
   justify-content: space-between;
   align-items: center;
-  padding: 120px 100px 50px;
+  padding: 80px 0 50px;
 }
 
 .contents-image {
-  width: 550px;
-  height: 450px;
+  width: 385px;
+  height: 315px;
   background-repeat: no-repeat;
   background-size: 105%;
   background-position: center;
