--- a/src/landing.css
+++ b/src/landing.css
@@ -25,8 +25,6 @@ nav {
   padding: 0 20rem;
 }
 
-.background-clip-text
-
 header {
   display: flex;
   flex-direction: column;
@@ -39,7 +37,6 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 4rem;
   padding-top: 7rem;
 }
 
@@ -61,7 +58,11 @@ header {
 }
 
 .cta-long {
-  width: 35rem;
+    width: 20rem;
+    height: 3.7rem;
+    margin: 2.4rem; 
+    font-size: 1.4rem;
+    line-height: 3.7rem;
 }
 
 .slogan {
@@ -73,6 +74,10 @@ header {
 
 .slogan-gradient {
   background-image: linear-gradient(119deg, var(--primary) 0%, #ff9f9f 100%);
+}
+
+.slogan-new-line {
+  display: none;
 }
 
 .background-clip-text {
@@ -197,6 +202,9 @@ footer {
 }
 
 @media (max-width: 1199px) {
+  .slogan-new-line {
+    display: block;
+  }
   .gnb {
     padding: 0;
     gap: 538px;
@@ -204,6 +212,7 @@ footer {
   }
   a.logo {
     margin-left: 32px;
+    
   }
   a.login-btn {
     margin-right: 32px;
@@ -217,20 +226,48 @@ footer {
 }
 
 @media (max-width: 767px) {
+  .slogan {
+    margin-top: 2.8rem;
+    font-size: 3.2rem;
+    line-height: 4.2rem;
+  }
+
   .hero-image {
     width: 100%;
     height: auto;
   }
   
+  .logo {
+    width: 88.667px;
+    height: 16px;
+  }
+
+  .logo img {
+    height: 100%;
+    width: 100%;
+  }
+
+  .cta {
+    height: auto;
+  }
+
+  .ctaa {
+    display: flex;
+    width: 80px;
+    padding: 10px 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+
   .hero-header {
     padding-left: 32px;
     padding-right: 32px;
     padding-top: 28px;
-  }
-  
-  .content-image {
-    width: 100%;
-    height: auto
   }
 
   article {
@@ -241,25 +278,34 @@ footer {
     padding:40px 32px 40px 32px;
     display: flex;
     flex-direction: column;
-    
-    
+    justify-content: center;
+    height: auto;
+    gap: 20px;
   }
+  
   .title {
     order: 0;
-    margin-bottom: 20px;
     width: 100%;
     height: auto;
+    font-size: 24px;
+    line-height: normal;
   }
   
   .content-image {
     order: 1;
     margin-bottom: 16px;
+    width: 100%;
+    height: auto;
   }
 
   .description {
     order: 2;
+    width: auto;
+    font-size: 1.5rem;
+    line-height: 2.25rem;
   }
 
-  
-  
+  .title br {
+    display: none;
+  }
 }
