--- a/src/sign.css
+++ b/src/sign.css
@@ -150,3 +150,11 @@ header {
   padding-top: 0.2rem;
   background-color: #f5e14b;
 }
+
+@media (max-width: 767px) {
+  body {
+    margin-left: 32px;
+    margin-right: 32px;
+    
+  }
+}
