--- a/style-landing.css
+++ b/style-landing.css
@@ -15,8 +15,6 @@ header {
 
 main {
   background-color: var(--white);
-  margin-top: -25px;
-  position: relative;
   z-index: 1;
 }
 
@@ -25,6 +23,13 @@ footer {
   margin-top: 100px;
 }
 
+.break-mobile {
+  display: inline;
+}
+
+.break-not-mobile {
+  display: none
+}
 
 .nav,
 .head,
@@ -35,38 +40,39 @@ footer {
 } 
 
 .nav {
-  max-width: 1920px;
+  width: 100%;
   position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
   background: transparent;
-  padding: 20px 168px;
+  padding: 13px 32px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .nav-logo {
+  width: 88.667px;
+  height: 16px;
   cursor: pointer;
-  margin-left: 32px;
+  background-image: url('./images/logo.svg');
+  background-position: center;
+  background-size: cover;
 }
 
 .nav-button {
   width: 128px;
-  margin-right: 32px;
 }
 
 .nav-button,
 .head-button {
-  padding: 16px 20px;
+  padding: 10px 16px;
   /* width: 128px; */
   border-radius: 8px;
   background: linear-gradient(91deg, #6d6afe 0.12%, #6AE3FE 101.84%) ;
-  
+   
   color: var(--off-white);
   font-family: Pretendard;
-  font-size: 18px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -80,23 +86,23 @@ footer {
 }
 
 .head {
-  width: 1200px;
+  width: 100%;
+  padding: 91px 32px 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  gap: 40px;
-  padding-top: 100px;
+  gap: 24px;
 }
 
 .head-text {
   text-align: center;
   font-family: Pretendard;
-  font-size: 56px;
+  font-size: 32px;
   font-style: normal;
   font-weight: 700;
-  line-height: 70px; /* 125% */
-  margin: 70px 0 0;
+  line-height: 42px; /* 131.25% */
+  margin: 0;
 }
 
 .head-text-gradiant {
@@ -107,35 +113,43 @@ footer {
 }
 
 .head-button {
-  width: 350px;
+  width: 200px;
 }
 
 .head-image {
-  width: 1200px;
-  height: 660px;
-  margin: 50px 40px 0;
-  border-radius: 25px;
-  background-image: linear-gradient(180deg, rgba(196, 196, 196, 0.00) 67.68%, #f0f6ff 94.76%);
-  box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
+  border-radius: 25px 25px 0 0;
+  margin: 14px 11px 0;
+  width: 100%;
+  padding-top: 48%;
+  background-image: linear-gradient(180deg, rgba(196, 196, 196, 0.00) 67.68%, #f0f6ff 125.4%),
+  url('./images/img-main.svg');
+
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.08);
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center top -20px;
+  background-size: 110%;
+  background-position: center;
+  overflow: hidden;
 }
+
 
 .contents {
   background: var(--white);
+  width: 100%; 
   display: flex;
-  width: 1000px;
-  height: 450px;
-  box-sizing: content-box;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  padding: 120px 100px 50px;
+  gap: 24px;
+  align-items: left;
+  padding: 40px 32px 36px;
+}
+
+.contents.reverse {
+  flex-direction: column-reverse;
 }
 
 .contents-image {
-  width: 550px;
-  height: 450px;
+  width: 100%;
+  padding-top: 81.8%;
   background-repeat: no-repeat;
   background-size: 105%;
   background-position: center;
@@ -144,7 +158,7 @@ footer {
 
 .contents-text-title {
   font-family: Pretendard;
-  font-size: 48px;
+  font-size: 24px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -184,18 +198,25 @@ footer {
 .contents-text-small {
   color: var(--grey-5);
   font-family: Abel;
-  font-size: 16px;
+  font-size: 15px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 150%; /* 24px */
   margin: 0;
 }
 
 .info {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
-  padding: 32px 104px 64px;
+  padding: 32px 32px 64px;
+}
+
+.info-box {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: flex-start;
+  gap: 60px;
 }
 
 .info-author {
@@ -211,7 +232,7 @@ footer {
 .info-description {
   display: flex;
   justify-content: space-between;
-  gap: 24px;
+  gap: 30px;
 }
 
 .info-description a{
@@ -221,7 +242,7 @@ footer {
 
 .info-sns {
   display: flex;
-  gap: 5px;
+  gap: 12px;
   justify-content: space-between;
 }
 
