--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,24 @@
 @import "reset.css";
 
-:root {
-  --primary: #6D6AFD;  /* CSS 전역 변수 선언 */
-  --red: #FF5B56;
-  --black: #111322;
-  --white: #FFFFFF;
-  --gray01: #3E3E43;
-  --gray02: #9FA6B2;
-  --gray03: #CCD5E3;
-  --gray04: #E7EFFB;
-  --gray05: #F0F6FF;
-}
 
 * {
   box-sizing: border-box;
 }
 
+:root {
+  --primary: #6d6afe;
+  --red: #ff5b56;
+  --black: #111322;
+  --white: #ffffff;
+  --gray1: #3e3e43;
+  --gray2: #9fa6b2;
+  --gray3: #ccd5e3;
+  --gray4: #e7effb;
+  --gray5: #f0f6ff;
+}
+
 html {
-  background-color: var(--gray);
-  min-width: 1920px;
+  background-color: #f0f6ff;
 }
 
 body {
@@ -36,11 +36,11 @@ header {
   top: 0;
 }
 
-header a{
+header a {
   cursor: pointer;
 }
 
-.button-style{
+.button-style {
   font-size: 18px;
   padding: 16px 20px;
   color: #F5F5F5;
@@ -102,6 +102,7 @@ header .onclick-signin {
   display: flex;
   gap: 100px;  
   flex-direction: column;
+  align-items: center;
 }
 
 .card {  
@@ -134,12 +135,11 @@ header .onclick-signin {
   justify-content: space-around ;
   background-color: var(--gray05);
   border-radius: 15px; 
-  overflow: hidden; 
+  overflow: hidden;
 }
 
-.service-01 img {
-  border-radius: 11px;
-  overflow: hidden;
+.images img {
+  width: 100%;
 }
 
 .service-01 span {
@@ -168,36 +168,6 @@ header .onclick-signin {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
-.service-01 .icon {  
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-
-.service-01 .center {
-  position: relative;
-}
-
-.service-02 img {
-  padding: 114px 68px 66px 68px;  
-}
-
-.service-03 .images-back {
-  position: relative;
-  background: rgba(0, 0, 0, 0.40);
-  box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.08);
-  border-radius: 25px;
-}
-
-.service-03 .images-front {
-  position: absolute;
-}
-
-.service-04 img {
-  padding-top: 55px;
-  padding-left: 60px;
 }
 
 footer {
@@ -239,3 +209,359 @@ footer p {
   width: 18px;
 }
 
+/* tablet */
+
+@media (max-width: 1199px) {
+
+  header {
+    margin: 0 auto;
+    padding: 20px 32px;
+    max-width: 800px;
+  }
+  
+  header a {
+    cursor: pointer;
+  }
+  
+  .button-style {
+    font-size: 18px;
+    padding: 16px 20px;
+    color: #F5F5F5;
+    font-family: Pretendard;
+    font-weight: 600;
+    border-radius: 8px;
+    text-align: center;
+    background-image: linear-gradient(90deg,var(--primary),skyblue);
+  }
+  
+  header .onclick-signin {
+    width: 128px;
+    cursor: pointer;
+  }
+  
+  .main {
+    margin: 70px 360px 0px 360px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:40px;
+  }
+  
+  .main-title {
+    width: 474px;
+  }
+  
+  .main-title span {
+    background: linear-gradient(91deg, #6D6AFE 17.28%, #FF9F9F 74.98%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 64px;
+    font-family: Pretendard;
+    font-weight: 700;
+    line-height: 80px;
+  }
+  
+  .main .onclick-signup {
+    width: 350px;
+  }
+  
+  .main img {
+    background: linear-gradient(180deg, rgba(196, 196, 196, 0) 0%, var(--gray05) 100%);
+    width: 650px;
+  }
+  
+  .service {
+    margin: 0 auto;
+    width: 100%;
+    padding: 120px 0;
+  }
+  
+  .cards {
+    width: 680px;
+    margin: 0 auto;
+  }
+  
+  .card {  
+    display: flex;
+    align-items: center;
+    gap: 51px;
+  }
+  
+  .card h2 {
+    color: #000000;
+    font-size: 48px;
+    font-family: Pretendard;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+  
+  .card-text {
+    color: #6B6B6B;
+    font-size: 16px;
+    font-family: Abel;
+    font-weight: 400;
+    width: 291px;
+  }
+  
+  .service .images {
+    height: 315px;
+    width: 364px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around ;
+    background-color: var(--gray05);
+    border-radius: 15px; 
+    overflow: hidden;
+  }
+  
+  .images img {
+    width: 100%;
+  }
+
+  .service-01 span {
+    background: linear-gradient(96deg, #FE8A8A 1.72%, #A4CEFF 74.97%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  
+  .service-02 span {
+    background: linear-gradient(277deg, #6FBAFF 59.22%, #FFD88B 93.66%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  
+  .service-03 span {
+    background: linear-gradient(99deg, #6D7CCD 19.76%, rgba(82, 136, 133, 0.22) 52.69%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+  }
+  
+  .service-04 span {
+    background: var(--Fandom-K-gra-blue-to-pink, linear-gradient(271deg, #FE578F -9.84%, #68E8F9 107.18%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  
+  footer {
+    background-color: #000000;
+    padding: 32px 104px 64px 104px;
+  }
+  
+  footer p {
+    color: #676767;
+    font-size: 16px;
+    font-family: Acme;
+    font-weight: 400;
+  }
+  
+  .footer-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  
+  .middle {
+    display: flex;
+    gap: 30px;
+  }
+  
+  .middle a {
+    color: #CFCFCF;
+    font-size: 16px;
+    font-family: Acme;
+    font-weight: 400;
+  }
+  
+  .left {
+    display: flex;
+    gap:12px;
+  }
+  
+  .left img {
+    width: 18px;
+  }
+}
+
+/* mobile */
+
+@media (min-width: 375px) and (max-width: 767px) {
+
+  header {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;;
+    justify-content: space-between;
+    padding: 20px 32px;
+    position: sticky;
+    top: 0;
+  }
+
+  header a {
+    cursor: pointer;
+  }
+
+  .button-style {
+    font-size: 18px;
+    padding: 16px 20px;
+    color: #F5F5F5;
+    font-family: Pretendard;
+    font-weight: 600;
+    border-radius: 8px;
+    text-align: center;
+    background-image: linear-gradient(90deg,var(--primary),skyblue);
+  }
+
+  header .onclick-signin {
+    width: 128px;
+    cursor: pointer;
+  }
+
+  .main {
+    margin:0;
+    padding: 24px 32px 0 32px;
+    gap:24px;
+  }
+
+  .main-title {
+    font-size: 32px;
+    width: 236px;
+    line-height: 42px;
+  }
+
+  .main-title span {
+    background: linear-gradient(91deg, #6D6AFE 17.28%, #FF9F9F 74.98%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 32px;
+    font-family: Pretendard;
+    font-weight: 700;
+    line-height: 42px;
+  }
+
+  .main .onclick-signup {
+    width: 200px;
+  }
+
+  .main img {
+    width: 100%;
+  }
+
+  .service {
+    background-color: white;
+    padding: 0;
+  }
+
+  .cards {
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .card {  
+    padding: 40px 32px 36px 32px;
+    width: 100%;
+    display: block;
+  }
+
+  .card h2 {
+    color: #000000;
+    font-size: 24px;
+    font-family: Pretendard;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+
+  .card-text {
+    color: #6B6B6B;
+    font-size: 15px;
+    font-family: Abel;
+    font-weight: 400;
+    width: 100%;
+  }
+
+  .service .images {
+    width: 100%;
+    height: initial;
+    display: flex;
+    align-items: center;
+    justify-content: space-around ;
+    background-color: var(--gray05);
+    border-radius: 15px; 
+    overflow: hidden;
+    margin-top: 24px;
+  }
+
+  .service-01 span {
+    background: linear-gradient(96deg, #FE8A8A 1.72%, #A4CEFF 74.97%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .service-02 span {
+    background: linear-gradient(277deg, #6FBAFF 59.22%, #FFD88B 93.66%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .service-03 span {
+    background: linear-gradient(99deg, #6D7CCD 19.76%, rgba(82, 136, 133, 0.22) 52.69%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+  }
+
+  .service-04 span {
+    background: var(--Fandom-K-gra-blue-to-pink, linear-gradient(271deg, #FE578F -9.84%, #68E8F9 107.18%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  footer {
+    background-color: #000000;
+    padding: 32px 104px 64px 104px;
+  }
+
+  footer p {
+    color: #676767;
+    font-size: 16px;
+    font-family: Acme;
+    font-weight: 400;
+  }
+
+  .footer-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .middle {
+    display: flex;
+    gap: 30px;
+  }
+
+  .middle a {
+    color: #CFCFCF;
+    font-size: 16px;
+    font-family: Acme;
+    font-weight: 400;
+  }
+
+  .left {
+    display: flex;
+    gap:12px;
+  }
+
+  .left img {
+    width: 18px;
+  }  
+}
