--- a/css/signin.css
+++ b/css/signin.css
@@ -9,9 +9,9 @@ html {
 }
 
 body {
+  height: 100%;
   position: relative;
   width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,7 +21,8 @@ body {
 .contents {
   display: flex;
   flex-direction: column;
-  gap:30px;
+  align-items: center;
+  gap: 30px;
 }
 
 .title {
@@ -183,4 +184,46 @@ input:focus {
 
 .pwd-input form {
   background-image: url(eye-off.svg);
+}
+
+@media (max-width: 767px) {
+  body {
+    width: initial;
+    margin: 0 auto;
+  }
+
+  .contents {
+    padding: 120px 32px 233px 32px;
+    width:100%;
+  }
+
+  input {
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .button-sign {
+    width: 100%;
+    max-width: 400px;    
+  }
+  
+  .social-login {
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .input-form {
+    width: 100%;
+  }
+
+  ol {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  ol li {
+    width: 100%;
+    max-width: 400px;
+  }
 }
