--- a/auth.css
+++ b/auth.css
@@ -1,44 +1,11 @@
-/* CSS 변수 */
-:root {
-  /* 컬러 */
-  --color-primary: #6d6afe;
-  --color-skyblue: #6ae3fe;
-  --color-red: #ff5b56;
-  --color-black: #111322;
-  --color-white: #ffffff;
-  --color-gray-900: #3e3e43;
-  --color-gray-700: #9fa6be;
-  --color-gray-500: #ccd5e3;
-  --color-gray-300: #e7effb;
-  --color-gray-100: #f0f6ff;
-  /* font-weight */
-  --font-bold: 700;
-  --font-semibold: 600;
-  --font-normal: 400;
-}
-
-/* font-face : pretendard cdn */
-@font-face {
-  font-family: 'pretendard';
-  src: url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css');
-  font-style: normal;
-}
-
-/* CSS reset */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  font-family: 'pretendard';
-  font-weight: var(--font-normal);
-  background-color: var(--color-gray-100);
-}
-
 /* body */
 body {
   margin-top: 5rem;
+  background-color: var(--color-gray-100);
+  font-weight: var(--font-normal);
 }
 
-.form {
+.auth-form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,7 +17,7 @@ body {
   height: 38px;
 }
 
-.form--desc {
+.auth-form--desc {
   display: flex;
   flex-direction: row;
   gap: 8px;
@@ -58,19 +25,19 @@ body {
   line-height: 24px;
 }
 
-.form--link {
+.auth-form--link {
   color: var(--color-primary);
   font-weight: var(--font-semibold);
 }
 
-.form--labelInput {
+.auth-form--labelInput {
   display: flex;
   flex-direction: column;
   gap: 12px;
   margin-top: 24px;
 }
 
-.form--input {
+.auth-form--input {
   width: 400px;
   height: 60px;
   background-color: var(--color-white);
@@ -79,7 +46,7 @@ body {
   padding: 18px 15px;
 }
 
-.form--input:focus {
+.auth-form--input:focus {
   border: 1px solid var(--color-primary);
 }
 
@@ -107,7 +74,7 @@ body {
 }
 
 /* 소셜로그인 */
-.socialLogin {
+.social-Login {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -120,13 +87,13 @@ body {
   border-radius: 8px;
 }
 
-.socialLogin--desc,
-.socialLogin--link {
+.social-Login--desc,
+.social-Login--link {
   background-color: var(--color-gray-300);
 }
 
-.socialLogin--link img,
-.socialLogin--link a {
+.social-Login--link img,
+.social-Login--link a {
   width: 42px;
   height: 42px;
   border-radius: 100%;
