--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ body {
   align-items: center;
   justify-content: center;
   font-weight: var(--font-bold);
-  font-size: 64px;
-  line-height: 80px;
+  font-size: 4rem;
+  line-height: 5;
   font-family: 'pretendard';
   color: var(--color-black);
 }
@@ -65,17 +65,12 @@ body {
   margin-top: 93px;
 }
 
-/* 랜딩페이지 강조문구 그라데이션  */
-/* 기본형 */
 .highlight--purplePink {
   color: transparent;
   background-clip: text;
   background-image: linear-gradient(90deg, #6d6afe, #ff9f9f);
 }
-/* 변형 */
-.purplePink {
-  background-image: linear-gradient(90deg, #6d6afe, #ff9f9f);
-}
+
 .highlight--redSkyblue {
   color: transparent;
   background-clip: text;
@@ -105,8 +100,8 @@ body {
 
 .content--title {
   font-weight: var(--font-bold);
-  font-size: 48px;
-  line-height: 57.6px;
+  font-size: 3rem;
+  line-height: 3.6;
   font-family: 'pretendard';
   color: var(--color-black);
   margin-bottom: 10px;
@@ -114,8 +109,8 @@ body {
 
 .content--desc {
   font-weight: var(--font-normal);
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1rem;
+  line-height: 1.5;
   font-family: 'pretendard';
   color: #6b6b6b;
 }
@@ -174,4 +169,13 @@ footer {
 }
 .sites {
   margin-right: 104px;
+}
+
+@media screen and (max-width: 1199px) {
+}
+@media screen and (max-width: 1199px) {
+  * {
+    margin-left: 32px;
+    margin-right: 32px;
+  }
 }
