--- a/Linkbrary/src/scss/abstracts/_mixins.scss
+++ b/Linkbrary/src/scss/abstracts/_mixins.scss
@@ -1,4 +1,6 @@
-@mixin flex-align-center {
+@mixin flex($direction: row, $justify: center, $align: center) {
   display: flex;
-  align-items: center;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: $align;
 }
