--- a/css/sign.css
+++ b/css/sign.css
@@ -91,10 +91,8 @@ header {
 
 .eye-button {
   position: absolute;
-  bottom: 2.2rem;
-  right: 1.5rem;
-  width: 1.6rem;
-  height: 1.6rem;
+  top: 50px;
+  left: 93%;
 }
 
 .cta {
@@ -151,14 +149,34 @@ header {
   background-color: #f5e14b;
 }
 
-@media screen and (max-width: 1199px) {
-  .sign-box, .sns-box {
-    bottom: 5%;
+@media (max-width: 1199px) {
+  header {
+    position: relative;
+    top: -60px;
+  }
+
+  .sign-box {
+    position: relative;
+    top: -60px;
   }
 }
 
-@media screen and (max-width: 767px) {
-  .sign-box, .sns-box {
-    bottom: 10%;
+@media (max-width: 767px) {
+  header {
+    position: relative;
+    top: -120px;
   }
+
+  .sign-box {
+    position: relative;
+    top: -120px;
+  }
+}
+
+.error-message, .password-message {
+  color: #FF5B56;
+  font-family: 'Pretendard';
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16.71px;
 }
