fix: Fix all link and import paths

--- a/Linkbrary/src/scss/base/_global.scss
+++ b/Linkbrary/src/scss/base/_global.scss
@@ -1,6 +1,6 @@
-@use "abstracts" as a;
-@use "base/typography" as t;
-@use "layouts";
+@use "../abstracts" as a;
+@use "typography" as t;
+@use "../layouts";
 body {
   width: 100%;
   height: 100%;
