--- a/Linkbrary/src/scss/components/_card.scss
+++ b/Linkbrary/src/scss/components/_card.scss
@@ -1,5 +1,4 @@
-@use "abstracts/mixins" as am;
-@use "abstracts/colors" as ac;
+@use "../abstracts" as a;
 
 .card {
   position: relative;
@@ -8,7 +7,7 @@
   flex-shrink: 0;
   border-radius: 15px;
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
-  @include am.flex(column, flex-start, stretch);
+  @include a.flex(column, flex-start, stretch);
   overflow: visible;
 }
 
@@ -20,7 +19,7 @@
   width: 100%;
   height: 40%;
   background-color: var(--white-color);
-  @include am.flex(column, flex-start, stretch);
+  @include a.flex(column, flex-start, stretch);
   padding: 8px 16px;
   border-bottom-right-radius: 15px;
   border-bottom-left-radius: 15px;
@@ -29,7 +28,7 @@
 
 .card-info-bar {
   width: 100%;
-  @include am.flex(row, space-between, center);
+  @include a.flex(row, space-between, center);
   align-self: stretch;
 }
 
@@ -53,7 +52,7 @@
 }
 
 .card-info-time {
-  color: ac.$grey-dark-color;
+  color: a.$grey-dark-color;
   font-size: 0.625em;
   line-height: normal;
 }
@@ -68,5 +67,5 @@
 }
 
 .card-selected {
-  border: 3px solid ac.$primary-color;
+  border: 3px solid a.$primary-color;
 }
