--- a/Linkbrary/src/scss/pages/_home.scss
+++ b/Linkbrary/src/scss/pages/_home.scss
@@ -1,6 +1,7 @@
 @use "../base/global";
 @use "../components";
 @use "../abstracts" as a;
+@use "../themes";
 
 .add-favorite {
   background-color: transparent;
