--- a/Linkbrary/src/scss/themes/_index.scss
+++ b/Linkbrary/src/scss/themes/_index.scss
@@ -1,4 +1,4 @@
 @forward "mobile-global";
-@forward "mobile-index";
+@forward "mobile-home";
 @forward "tablet-global";
-@forward "tablet-index";
+@forward "tablet-home";
