--- a/Linkbrary/src/scss/themes/_tablet-home.scss
+++ b/Linkbrary/src/scss/themes/_tablet-home.scss
@@ -1,62 +1,64 @@
-.heading-style {
-  width: 84%;
-  display: block;
-  margin: auto;
-}
+@media (max-width: 1199px) {
+  .heading-style {
+    width: 84%;
+    display: block;
+    margin: auto;
+  }
 
-.top-heading {
-  width: 472px;
-}
+  .top-heading {
+    width: 472px;
+  }
 
-.page-sample-section {
-  padding-top: 40px;
-}
+  .page-sample-section {
+    padding-top: 40px;
+  }
 
-.card {
-  font-size: 10px;
-}
+  .card {
+    font-size: 10px;
+  }
 
-.container {
-  width: 698px;
-  height: 315px;
-  gap: 51px;
-}
+  .container {
+    width: 698px;
+    height: 315px;
+    gap: 51px;
+  }
 
-.feature-description div {
-  width: 262px;
-}
+  .feature-description div {
+    width: 262px;
+  }
 
-.folder-change {
-  display: none;
-}
+  .folder-change {
+    display: none;
+  }
 
-.folder-manage-image {
-  background-image: url("../img/feature_bg1.png");
-  background-size: cover;
-}
+  .folder-manage-image {
+    background-image: url("../../img/feature_bg1.png");
+    background-size: cover;
+  }
 
-.folder-share-image {
-  background-image: url("../img/feature_bg2.png");
-  background-size: cover;
-}
+  .folder-share-image {
+    background-image: url("../../img/feature_bg2.png");
+    background-size: cover;
+  }
 
-.folder-search-image {
-  background-image: url("../img/feature_bg3.png");
-  background-size: cover;
-}
+  .folder-search-image {
+    background-image: url("../../img/feature_bg3.png");
+    background-size: cover;
+  }
 
-.folder-input {
-  width: 196px;
-}
+  .folder-input {
+    width: 196px;
+  }
 
-.no-shrink-card {
-  width: 168px;
-}
+  .no-shrink-card {
+    width: 168px;
+  }
 
-.search-box {
-  display: none;
-}
+  .search-box {
+    display: none;
+  }
 
-.share-bg {
-  display: none;
+  .share-bg {
+    display: none;
+  }
 }
