--- a/css/pages/login/login.css
+++ b/css/pages/login/login.css
@@ -36,3 +36,25 @@ body {
 .login-form .login-button {
     margin: 1.875rem 0 0;
 }
+
+@media (max-width: 1199px) { /* 타블렛 */
+    .login-body {
+        margin: 14.875rem 0;
+        padding: 0 2rem;
+    }
+}
+
+@media (max-width: 767px) { /* 모바일 */
+    .login-con {
+        width: 100%;
+    }
+
+    .login-body {
+        margin: 7.5rem 0;
+    }
+    
+    .login-form .login-button  {
+        font-size: 1.125rem;
+        padding: 1rem 0;
+    }
+}
