--- a/css/reset.css
+++ b/css/reset.css
@@ -1,7 +1,7 @@
 a {text-decoration:none; color: inherit;}
 a:hover {text-decoration:none;}
 cite, cite a:link, cite a:visited {color:#202124;font-style:normal}
-button {margin:0; cursor: pointer;}
+button {background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; margin: 0; overflow:visible; cursor:pointer;}
 ul li {list-style:none}
 ol, ul, li {margin:0;padding:0;}
 
