--- a/Linkbrary/src/scss/components/_container.scss
+++ b/Linkbrary/src/scss/components/_container.scss
@@ -5,4 +5,16 @@
   width: 998px;
   height: 450px;
   gap: 157px;
+  @media (max-width: 1199px) {
+    width: 698px;
+    height: 315px;
+    gap: 51px;
+  }
+  @media (max-width: 767px) {
+    position: relative;
+    flex-direction: column;
+    gap: 20px;
+    height: fit-content;
+    width: 100%;
+  }
 }
