--- a/Linkbrary/src/scss/layouts/_footer.scss
+++ b/Linkbrary/src/scss/layouts/_footer.scss
@@ -27,3 +27,17 @@ footer {
   font-family: Abel;
   font-size: 1em;
 }
+
+@media (max-width: 767px) {
+  .footer-bar {
+    display: grid;
+    grid-template-columns: 181px 116px;
+    column-gap: auto;
+    row-gap: 60px;
+    padding: 32px;
+  }
+
+  .copyright {
+    order: 1;
+  }
+}
