--- a/Linkbrary/src/scss/pages/_home.scss
+++ b/Linkbrary/src/scss/pages/_home.scss
@@ -9,18 +9,20 @@
   top: 5%;
   right: 5%;
   width: 20%;
-}
 
-.add-favorite img {
-  width: 100%;
-}
+  img {
+    width: 100%;
+  }
 
-.add-favorite:hover .normal-star {
-  display: none;
-}
+  &:hover {
+    .normal-star {
+      display: none;
+    }
 
-.add-favorite:hover .purple-star {
-  display: inline-block;
+    .purple-star {
+      display: inline-block;
+    }
+  }
 }
 
 .description {
@@ -128,48 +130,6 @@
   padding: 120px 0px;
   gap: 100px;
   flex: 1;
-}
-
-.gradient1 {
-  background: linear-gradient(91deg, #6d6afe 17.28%, #ff9f9f 74.98%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.gradient2 {
-  background: linear-gradient(96deg, #fe8a8a 1.72%, #a4ceff 74.97%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.gradient3 {
-  background: linear-gradient(277deg, #6fbaff 19.22%, #ffd88b 93.66%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.gradient4 {
-  background: linear-gradient(
-    99deg,
-    #6d7ccd 69.76%,
-    rgba(82, 136, 133, 0.22) 99.69%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.gradient5 {
-  background: var(
-    --Fandom-K-gra-blue-to-pink,
-    linear-gradient(271deg, #fe578f -9.84%, #68e8f9 107.18%)
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 
 .info-link-bar ul {
