style: Create _feature-description.scss in component dir

--- a/Linkbrary/src/scss/pages/_home.scss
+++ b/Linkbrary/src/scss/pages/_home.scss
@@ -25,30 +25,6 @@
   }
 }
 
-.description {
-  color: #6b6b6b;
-  margin-right: 0.625em;
-  font-family: Abel;
-  font-size: 1em;
-  line-height: 150%;
-}
-
-.feature-description {
-  @include a.flex(column, center, center);
-  gap: 10px;
-}
-
-.feature-example-image {
-  position: relative;
-  @include a.flex(row, center, center);
-  overflow: hidden;
-  flex-shrink: 0;
-  background-color: a.$d1-gray-color;
-  width: 55%;
-  aspect-ratio: 55/45;
-  border-radius: 15px;
-}
-
 .folder-add {
   color: a.$primary-color;
 }
@@ -98,25 +74,9 @@
   width: 280px;
 }
 
-.feature-description-heading {
-  color: #000;
-  font-size: 3em;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: -0.3px;
-}
-
 .folder-share-link {
   @include a.flex(row, space-between, stretch);
   gap: 32px;
-}
-
-.feature-description-section {
-  background-color: a.$white-color;
-  margin: -120px 0 0;
-  padding: 120px 0px;
-  gap: 100px;
-  flex: 1;
 }
 
 .info-link-bar ul {
@@ -152,10 +112,6 @@
 .logo {
   width: 150px;
   height: 24px;
-}
-
-.mobile-description {
-  display: none;
 }
 
 .no-shrink-card {
@@ -312,25 +268,17 @@
   line-height: 15px;
 }
 
-.svg-change {
-  transition: fill 0.3s ease;
-}
-
-.svg-change:hover {
-  fill: a.$primary-color;
-}
-
 .thumbnail {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   flex-grow: 1;
-}
 
-.thumbnail img {
-  border-radius: inherit;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  img {
+    border-radius: inherit;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .top-heading {
