fix: Fix button style errors

--- a/Linkbrary/src/scss/components/_buttons.scss
+++ b/Linkbrary/src/scss/components/_buttons.scss
@@ -1,6 +1,7 @@
 @use "../abstracts" as a;
 
 button {
+  background-color: transparent;
   border-radius: 5px;
   font-size: 1em;
   font-weight: 600;
