fix: Fix feature-description font size in mobile

--- a/Linkbrary/src/scss/components/_feature-description.scss
+++ b/Linkbrary/src/scss/components/_feature-description.scss
@@ -48,6 +48,9 @@
 
     .feature-description {
       align-items: flex-start;
+      .feature-description-heading {
+        font-size: 24px;
+      }
 
       .description {
         display: none;
