refactor: Add tablet style to header and remove tablet-global.scss

--- a/Linkbrary/src/scss/layouts/_header.scss
+++ b/Linkbrary/src/scss/layouts/_header.scss
@@ -8,6 +8,9 @@ header {
   @include a.flex(row, space-between, center);
   background-color: inherit;
   z-index: 2;
+  @media (max-width: 1199px) {
+    padding: 20px 32px;
+  }
 }
 
 .blind {
