refactor: Change auth-page.scss code to scss nesting style

--- a/Linkbrary/src/scss/abstracts/_mixins.scss
+++ b/Linkbrary/src/scss/abstracts/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin flex($direction: row, $justify: center, $align: center) {
+@mixin flex($direction: row, $justify: flex-start, $align: stretch) {
   display: flex;
   flex-direction: $direction;
   justify-content: $justify;
