Feat: 회원가입 validation 작업

--- a/css/scss/common/common.scss
+++ b/css/scss/common/common.scss
@@ -222,7 +222,7 @@ body {
       color: var(--color-red);
       line-height: 1;
     }
-    .error {
+    &.error {
       .error__text {
         display: block;
       }
