feat: Add toggle feature in password input

--- a/Linkbrary/src/scss/pages/_auth-page.scss
+++ b/Linkbrary/src/scss/pages/_auth-page.scss
@@ -62,7 +62,7 @@ main {
             right: 10px;
             top: 15px;
 
-            &:hover .eye-on {
+            &:hover img {
               filter: brightness(0);
             }
           }
