Refactor: 패스워드 validation기능을 validate.js로 이동 및 password.js수정

--- a/css/common/common.css
+++ b/css/common/common.css
@@ -184,19 +184,19 @@ body {
 .form__box .btn__pw img {
   display: block;
 }
-.form__box .btn__pw__off {
-  top: calc(50% + 1px);
-}
-.form__box .btn__pw__off .icon__on {
+.form__box .btn__pw .icon__on {
   display: none;
 }
+.form__box .btn__pw .icon__off {
+  display: block;
+}
+.form__box .btn__pw__off {
+  top: calc(50% - 1px);
+}
+.form__box .btn__pw__off .icon__on {
+  display: block;
+}
 .form__box .btn__pw__off .icon__off {
-  display: block;
-}
-.form__box .btn__pw__on .icon__on {
-  display: block;
-}
-.form__box .btn__pw__on .icon__off {
   display: none;
 }
 .form__box .error__text {
