refactor: Rename .eye-btn class to .pw-toggle-btn

--- a/Linkbrary/src/scss/pages/_auth-page.scss
+++ b/Linkbrary/src/scss/pages/_auth-page.scss
@@ -56,7 +56,7 @@ main {
         .pw-input {
           position: relative;
 
-          .eye-btn {
+          .pw-toggle-btn {
             position: relative;
             background-color: inherit;
             position: absolute;
